<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/bottomSitios"
            android:enabled="true"
            android:icon="@drawable/ic_action_name"
            android:title="@string/navigation_bottom_sitios"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/bottomFavoritos"
            android:enabled="true"
            android:icon="@drawable/ic_fav"
            android:title="@string/navigation_bottom_favoritos"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/bottomPerfil"
            android:enabled="true"
            android:icon="@drawable/ic_perfil"
            android:title="@string/navigation_bottom_perfil"
            app:showAsAction="ifRoom"/>
</menu>