<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:fillViewport="true"
        tools:context=".activities.Login.LoginActivity">

    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".activities.Login.LoginActivity">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_edit_text_height"
                android:id="@+id/etEmail"
                android:inputType="textEmailAddress"
                android:hint="@string/login_email"
                android:textSize="@dimen/login_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edittext_rounder"
                android:paddingLeft="@dimen/login_edit_text_space"
                android:paddingRight="@dimen/login_edit_text_space"
                android:layout_marginBottom="24dp" app:layout_constraintBottom_toTopOf="@+id/etPassword"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_edit_text_height"
                android:id="@+id/etPassword"
                android:inputType="textPassword"
                android:hint="@string/login_password"
                android:textSize="@dimen/login_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edittext_rounder"
                android:paddingLeft="@dimen/login_edit_text_space"
                android:paddingRight="@dimen/login_edit_text_space"
                app:layout_constraintHorizontal_bias="1.0" android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toTopOf="@+id/btnLogIn"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_button_xl_height"
                android:id="@+id/btnLogIn"
                android:text="@string/login_sign_in"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/login_text_xl_size"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp"
                android:background="@drawable/button_ripple_bg" android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toTopOf="@+id/tvForgotPassword"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvForgotPassword"
                android:text="@string/login_forgot_password"
                android:textColor="@color/colorSecondaryText"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toTopOf="@+id/btnLogInGoogle"/>

        <Button
                android:id="@+id/btnLogInGoogle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_button_height"
                android:text="@string/login_sign_in_google"
                android:textColor="@color/colorPrimaryText"
                android:background="@drawable/button_ripple_google"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp" android:layout_marginBottom="64dp"
                app:layout_constraintBottom_toTopOf="@+id/btnCreateAccount"/>
        <Button
                android:id="@+id/btnCreateAccount"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_button_xl_height"
                android:text="@string/login_create_account"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/login_text_size"
                android:background="@drawable/button_ripple"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginBottom="4dp"
        />
    </android.support.constraint.ConstraintLayout>
</ScrollView>